add vue.js and webpacker

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,13 +1,15 @@
 body {
   background-color: #fff;
-  color: #303743;
-  font-family: 'Quicksand', sans-serif;
+  color: #333;
+  margin: 33px;
+  font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
 }
 
 p, ol, ul, td {
-  font-family: 'Quicksand', sans-serif;  font-size: 13px;
+  font-family: verdana, arial, helvetica, sans-serif;
+  font-size: 13px;
   line-height: 18px;
 }
 
@@ -18,16 +20,15 @@ pre {
 }
 
 a {
-  color: #303743;
-
+  color: #000;
 
   &:visited {
-    color: #63686b;
+    color: #666;
   }
 
   &:hover {
-    color: #7889a3;
-    
+    color: #fff;
+    background-color: #000;
   }
 }
 
