--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,22 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ProjectManagement</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag    'application', 'data-turbolinks-track': 'reload' %>
+    <%= render 'shared/head' %>
   </head>
 
   <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <%= render 'shared/navigation' %>
+    <%= render 'shared/notices' %>
 
+    <div class="container-fluid">
 
     <%= yield %>
-
+    </div>
+    
     
   </body>
 </html>
